fixed queue wrapping

--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -244,6 +244,9 @@ margin: 0.5rem 0 0.5rem 0;
     min-height:1rem;
     display: flex;
     align-items: center;
+    white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .queue_songlist::-webkit-scrollbar {
